# robosub-1

./: .gitignore  .gitmodules  .hgignore  .hgingore  Arduino.pde  CMakeLists.txt  Compilation.md  LICENSE  Makefile  Makefile.orig  README  README.md  SliderThrusterController.py  buoyparse.py  comm.py  debug  makefile readme.txt  microcontroller_interface.py  readme  robosubLocalization.py  schwartzmeyer.org
David/: AI  mk  (+22 more)
src/: CMakeLists.txt  Dr. Frankenstein's Machine  Makefile  communication_settings.json  core.cpp  image_kb.h  kb.h  main.cpp  microcontroller_interface _WIN.py  requirements.md  robosub.h  robosub.h.in  robosub_settings.py  settings.json  settings.txt  slog
src/control_system/: control_task  main.cpp  robosub_controller.cpp  robosub_controller.h
src/datafeed/raw/depth/: mock.py
src/decision/: AIStateMachine.py  CMakeLists.txt  Makefile  MasterAI.py  README_SLIDER.md  TaskAI.py  advisors_peon.py  ai_state_machine.py  base_dlm.cpp  base_dlm.h  base_oligarch.py  depth_oligarch.py  driving_dlm.cpp  driving_dlm.h  master_ai.py  mock_dlm.cpp  mock_dlm.h  parking_dlm.cpp  parking_dlm.h  path_dlm.cpp  path_dlm.h  path_oligarch.py  pizza_dlm.cpp  pizza_dlm.h  readme.md  settings.py  shadow_behind_the_throne.py  speed_trap_dlm.cpp  speed_trap_dlm.h  start_dlm.cpp  start_dlm.h  todo.md  tollbooth_dlm.cpp  tollbooth_dlm.h  traffic_light_dlm.cpp  traffic_light_dlm.h
src/decision/Legacy AI/: grapevine_templates
src/decision/advisor/: Rasputin.py
src/decision/tasks/: BaseTaskAI.py  FooSquareTask.py  StandbyTask.py  dive_task.py  foo_square_task.py  line_follow_task.py  standby_task.py  startgate_task  task_code.py
src/decision/test/: UserInputControl.py  master_ai_gui.py
src/joytest/: Makefile  joytest.cpp
src/librealjoy/: Makefile
src/logging/: todo.md
src/microcontroller/: Timer_ISR.c  microcontroller_debugging_interface.py  microcontroller_interface.py
src/microcontroller_interface/: LED_microcontroller_debugging_interface.py  LED_microcontroller_interface.py  depth_control.py  microcontroller.py  microcontroller_debugging_interface.py  microcontroller_interface.py  microcontroller_interface_LEDupdate.py  old_sub_microcontroller_debugging_interface.py  old_sub_microcontroller_interface.py  sensor_microcontroller_debugging_interface.py  slog  thruster_microcontroller_debugging_interface.py
src/movement/: CMakeLists.txt  Makefile  foo.html  fuzzy_sets.cpp  fuzzy_sets.h  movement_packets.txt  settings.py  todo.md
src/movement/defuzzification/: defuzzifier.py
src/movement/directive/: SimpleButton.py  Slider.py  SliderThrusterController.py  SubmarinePhysics.py  UserInputControl.py  despot.py  fuzzy_logic_fuzzifier.py
src/movement/directive/test/: despot.py  mock.py
src/movement/fuzzification/: fuzzifier.py
src/movement/fuzzification/test/: despot.py  xbox_controller.py  xboxdrv_parser.py
src/movement/physical/: DEPRICATION_WARNING  fuzzy_logic_defuzzifier.py  jockey.py
src/movement/physical/test/: jockey.py  mock.py  mock_jockey.py
src/movement/stabalization/: tightrope_walker.py
src/movement/stabalization/test/: mock.py  tightrope_walker.py
src/movement/stabilization/: PID.py  complementary_filter.py  stabilization.py  stabilizer.py
src/movement/translation/: translater.py
src/robosub_joystick/: Makefile  joystick.sh
src/robosub_joystick/auv/: Makefile  arduino_data.h  main.cpp  robosub_control_data.cpp  robosub_controller.cpp  robosub_controller.h
src/robosub_joystick/client/: Makefile  joystick_adapter_interface.h  robosub_joystick_publisher.cpp
src/sensor/: kalman.py  sanitation-main.py  sanitation.py  todo.md
src/sensor/Hydrophone/: autocorr.c  autocorr.h  build.sh  playback.c  record.c  sndcode.c
src/sensor/filter/: complementary_filter.py
src/sensor/sanitation/: sanitation.py  sensor_logger.py
src/sensor/serial/: Testing.py  spinal_tap.py
src/sensor/serial/test/: display_messages.py
src/sensor/vision/: Fates.py  VisionProcessor.py  camera_settings.json  frame_preprocessor.py  frame_processor.py  image_preprocessor.py  settings.json  settings.py  stream_processor.py  todo.md  vision_controller.py  vision_processor.py  visiond.py
src/sensor/vision/Logging/: video_logger.py
src/sensor/vision/logging/: VideoLogger.py  video_logger.py
src/sensor/vision/modules/: Template.py
src/sensor/vision/plugins/: Path.py  PathDetection.py  Streamer.py  Template.py  Tester.py  VideoLogger.py  __init__.py  color_detect.py  frame_processor.py  path_follow.py  pathing.py  rof.py
src/sensor/vision/util/: Exceptions.py
src/state/: CMakeLists.txt  state_machine.cpp  state_machine.h
src/state_machine/: CMakeLists.txt  Makefile  state_machine.h
src/template/communication/: todo.md
src/test/: basic_test.py
src/test/beaglebone_demo/: blinkenlights.py  debug_demo_config.json  demo_config.json  release_demo_config.json
src/test/beaglebone_demo/minion/: gefingerpoken.py
src/test/simulation/: todo.md
src/util/: settings.py  todo.md
src/util/communication/: demo_publisher.py  demo_subscriber.py  grapevine.py  mock_bar.py  mock_foo.py
src/util/logger/: logger.py
src/util/logging/: Logger.py  chitter_chatter.py  logger.py  logger_settings.json  pale_lager.py
src/util/monitoring/: crystal_ball.py  crystal_ball2.py  vision_monitor.py
src/utility/: DebugLog.cpp  DebugLog.hpp
src/vision/: CMakeLists.txt  Makefile  base_eye.cpp  base_eye.h  checkImage.cpp  driving_eye.cpp  driving_eye.h  fuzzy_set_membership.h  match.cpp  parking_eye.cpp  parking_eye.h  path.cpp  path_eye.cpp  path_eye.h  pizza_eye.cpp  pizza_eye.h  speed_trap_eye.cpp  speed_trap_eye.h  squares.cpp  start_eye.cpp  start_eye.h  tollbooth_eye.cpp  tollbooth_eye.h  traffic_light_eye.cpp  traffic_light_eye.h  vision_utilities.cpp  vision_utilities.h
test/: CMakeLists.txt  Makefile  can_call.cpp  decision_tests.cpp  foobar_test.cpp  movement_tests.cpp  notes.txt  readme.txt  state_machine_tests.cpp  util.tar  vision_test.cpp  vision_tests.cpp
test/util/: lazy_compile  lazy_compile1  lazy_compile2  test.cpp  test_1cam  test_2cam  test_2cam.cpp
(+487 files in other folders)
